<resources>
    <string name="ugckit_btn_back">返回</string>
    <string name="ugckit_btn_cancel">取消</string>
    <string name="ugckit_btn_ok">确定</string>
    <string name="ugckit_btn_confirm">确认</string>
    <string name="ugckit_activity_login_login">登录</string>
    <string name="ugckit_activity_login_register">注册新用户</string>
    <string name="ugckit_activity_login_username">用户名</string>
    <string name="ugckit_activity_login_password">密码</string>
    <string name="ugckit_activity_register_register">注册</string>
    <string name="ugckit_activity_register_username">用户名(4~24位字母、数字、下划线)</string>
    <string name="ugckit_activity_register_password">密码(8~16位个字符)</string>
    <string name="ugckit_activity_register_password_verify">确认密码</string>
    <string name="ugckit_float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="ugckit_app_about">关于</string>
    <string name="ugckit_btn_login_out">退出登录</string>
    <string name="ugckit_video_edit_segment">设置想要截取的片段</string>
    <string name="ugckit_music_empty">空空如也</string>
    <string name="ugckit_music_loading">正在加载本地音乐...</string>
    <string name="ugckit_follow_shot">合拍</string>
    <string name="ugckit_next_step">下一步</string>
    <string name="ugckit_speed_very_slow">极慢</string>
    <string name="ugckit_speed_slow">慢速</string>
    <string name="ugckit_speed_normal">标准</string>
    <string name="ugckit_speed_fast">快速</string>
    <string name="ugckit_speed_very_fast">极快</string>
    <string name="ugckit_aspect">屏比</string>
    <string name="ugckit_beauty">美颜</string>
    <string name="ugckit_music">音乐</string>
    <string name="ugckit_motion">动作</string>
    <string name="ugckit_speed">速度</string>
    <string name="ugckit_filter">滤镜</string>
    <string name="ugckit_paster">贴纸</string>
    <string name="ugckit_subtitle">字幕</string>
    <string name="ugckit_cancel_record">取消拍摄</string>
    <string name="ugckit_confirm_cancel_edit_content">确认放弃当前编辑的内容？</string>
    <string name="ugckit_confirm_cancel_record_content">确认放弃当前拍摄的内容？</string>
    <string name="ugckit_wrong_click">点错了</string>
    <string name="ugckit_give_up">放弃</string>
    <string name="ugckit_video_record_title">拍摄</string>
    <string name="ugckit_video_editer_title">编辑</string>
    <string name="ugckit_picture_editer_title">图片</string>
    <string name="ugckit_picture_choose">选择图片</string>
    <string name="ugckit_video_long_drag">长按拖拽可调整视频顺序</string>
    <string name="ugckit_select_bgm">选择背景音乐</string>
    <string name="ugckit_mic_volume">录音音量</string>
    <string name="ugckit_bgm_volume">背景音乐音量</string>
    <string name="ugckit_tips">提示</string>
    <string name="ugckit_delete_bgm_or_not">确定清除已添加的背景音乐？</string>
    <string name="ugckit_confirm_delete">确定清除</string>
    <string name="ugckit_bgm_start_position">当前从%1$s开始</string>
    <string name="ugckit_no_content">暂无内容哦~</string>
    <string name="ugckit_none">无</string>
    <string name="ugckit_reverse">倒放</string>
    <string name="ugckit_slow_motion">慢动作</string>
    <string name="ugckit_repeate">反复</string>
    <string name="ugckit_add">新增</string>
    <string name="ugckit_motion_soul_out">灵魂出窍</string>
    <string name="ugckit_motion_split">视频分裂</string>
    <string name="ugckit_motion_rock_light">动感光波</string>
    <string name="ugckit_motion_dark_dream">暗黑幻境</string>
    <string name="ugckit_motion_win_shadow">百叶窗</string>
    <string name="ugckit_motion_ghost_shadow">鬼影</string>
    <string name="ugckit_motion_phantom_shadow">幻影</string>
    <string name="ugckit_motion_ghost">幽灵</string>
    <string name="ugckit_motion_lightning">闪电</string>
    <string name="ugckit_motion_mirror">镜像</string>
    <string name="ugckit_motion_illusion">幻觉</string>
    <string name="ugckit_cancel_publish_title">取消上传</string>
    <string name="ugckit_cancel_publish_msg">视频即将上传完成，真的要取消上传吗？</string>
    <string name="ugckit_revert">撤销</string>
    <string name="ugckit_complete">完成</string>
    <string name="ugckit_state_pause">暂停</string>
    <string name="ugckit_save_success">保存完成</string>
    <string name="ugckit_download">下载</string>
    <string name="ugckit_downloaded">已下载</string>
    <string name="ugckit_use">使用</string>
    <string name="ugckit_downloading">下载中</string>
    <string name="ugckit_dynamic_paster">动态贴纸</string>
    <string name="ugckit_static_paster">静态贴纸</string>
    <string name="ugckit_bublle_style">气泡样式</string>
    <string name="ugckit_text_color">文字颜色</string>
    <string name="ugckit_video_joining">视频拼接中...</string>
    <string name="ugckit_cancel_joining">取消拼接视频</string>
    <string name="ugckit_video_cutting">视频裁剪中...</string>
    <string name="ugckit_publish_success">发布成功</string>
    <string name="ugckit_about_tip1">小视频是由腾讯视频云团队提供的一款原型级别的 APP，致力于以 DEMO 的形式向您展示腾讯视频云在短视频领域的各项能力。比如如何利用视频云 SDK 进行短视频的分段录制和编辑，如何利用对象存储（COS）服务实现视频上传和发布，如何使用点播（VOD）服务实现视频的分发。</string>
    <string name="ugckit_language_setting_activity_language">语言</string>
    <string name="ugckit_language_setting_activity_follow_system">跟随系统（重启生效）</string>
    <string name="ugckit_language_setting_activity_save">保存</string>
    <string name="ugckit_user_info_fragment_setting">设置</string>
    <string name="ugckit_setting_activity_language">语言</string>
    <string name="ugckit_setting_activity_setting">设置</string>
    <string name="ugckit_fragment_user_info_please_lonin">请先登录</string>
    <string name="ugckit_fragment_bgm_cancel">取消</string>
    <string name="ugckit_dialog_ugc_tip_already_known">知道了</string>
    <string name="ugckit_unit_second">秒</string>
    <string name="ugckit_fragment_confirm_confirm">确定</string>
    <string name="ugckit_fragment_confirm_cancel">取消</string>
    <string name="ugckit_fragment_confirm_ok">确定</string>
    <string name="ugckit_fragment_confirm_input_tip">请输入内容</string>
    <string name="ugckit_activity_register_register_new_user">注册新用户</string>
    <string name="ugckit_video_list_adapter_video_state_normal">已审核</string>
    <string name="ugckit_video_list_adapter_video_state_in_audit">审核中</string>
    <string name="ugckit_video_list_adapter_video_state_pornographic">涉黄</string>
    <string name="ugckit_tc_ugc_video_list_adapter_just_now">刚刚</string>
    <string name="ugckit_tc_ugc_video_list_adapter_mins_ago">分钟前</string>
    <string name="ugckit_tc_ugc_video_list_adapter_hours_ago">小时前</string>
    <string name="ugckit_tc_ugc_video_list_adapter_days_ago">天前</string>
    <string name="ugckit_video_list_adapter_min_ago">分钟前</string>
    <string name="ugckit_video_list_adapter_hour_ago">小时前</string>
    <string name="ugckit_video_list_adapter_day_ago">天前</string>
    <string name="ugckit_fragment_videolist_no_content">暂无内容噢~</string>
    <string name="ugckit_tc_picture_join_activity_toast_picture_is_abnormal_and_finish_editing">图片异常，结束编辑</string>
    <string name="ugckit_tc_picture_join_activity_toast_cancel_video_generation">取消视频生成</string>
    <string name="ugckit_picture_join_left_right">左右</string>
    <string name="ugckit_picture_join_up_down">上下</string>
    <string name="ugckit_picture_join_zoom_in">放大</string>
    <string name="ugckit_picture_join_zoom_out">缩小</string>
    <string name="ugckit_picture_join_rotate">旋转</string>
    <string name="ugckit_picture_join_fade_in_and_fade_out">淡入淡出</string>
    <string name="ugckit_fragment_input_word_input_tip">请输入内容</string>
    <string name="ugckit_fragment_input_word_cancel">取消</string>
    <string name="ugckit_fragment_input_word_ok">确定</string>
    <string name="ugckit_layout_joiner_progress_video_is_generating">视频生成中...</string>
    <string name="ugckit_audio_ctrl_accompaniment">伴奏</string>
    <string name="ugckit_audio_ctrl_finish">结束</string>
    <string name="ugckit_audio_ctrl_voice">人声</string>
    <string name="ugckit_audio_ctrl_vol">音量调节</string>
    <string name="ugckit_login_activity_login_successfully">登录成功</string>
    <string name="ugckit_login_activity_auto_login_failed">自动登录失败</string>
    <string name="ugckit_login_activity_no_network_connection">当前无网络连接</string>
    <string name="ugckit_login_activity_password_length_tip">密码长度应为8-16位</string>
    <string name="ugckit_login_activity_username_does_not_meet_specifications">用户名不规范</string>
    <string name="ugckit_register_activity_attempt_normal_regist_username_does_not_meet_specifications">用户名不规范</string>
    <string name="ugckit_register_activity_attempt_normal_regist_password_length_error">密码长度应为8-16位</string>
    <string name="ugckit_register_activity_attempt_normal_regist_password_verify_error">两次输入密码不一致</string>
    <string name="ugckit_register_activity_attempt_normal_regist_no_network_connection">当前无网络连接</string>
    <string name="ugckit_register_activity_register_callback_register_successfully">注册成功</string>
    <string name="ugckit_register_activity_register_callback_auto_login_successfully">自动登录成功</string>
    <string name="ugckit_register_activity_register_callback_auto_login_failed">自动登录失败</string>
    <string name="ugckit_register_activity_register_callback_username_format_error">用户名格式错误</string>
    <string name="ugckit_register_activity_register_callback_password_format_error">密码格式错误</string>
    <string name="ugckit_register_activity_register_callback_username_already_exists">用户名已存在</string>
    <string name="ugckit_register_activity_register_callback_register_failed">注册失败:</string>
    <string name="ugckit_video_record_activity_start_record_start_record_ok">开始录制成功</string>
    <string name="ugckit_video_record_activity_start_record_start_record_err_is_in_recording">存在未完成的任务</string>
    <string name="ugckit_video_record_activity_start_record_start_record_err_video_path_is_empty">视频文件路径为空</string>
    <string name="ugckit_video_record_activity_start_record_start_record_err_api_is_lower_than_18">版本小于18</string>
    <string name="ugckit_video_record_activity_start_record_start_record_err_not_init">还未初始化结束</string>
    <string name="ugckit_video_record_activity_start_record_start_record_err_licence_verification_failed">licence校验失败</string>
    <string name="ugckit_video_record_activity_start_record_record_failed_tip">录制失败，错误码：</string>
    <string name="ugckit_video_record_activity_on_record_event_evt_camera_cannot_use">摄像头打开失败，请检查权限</string>
    <string name="ugckit_video_record_activity_on_record_event_evt_mic_cannot_use">麦克风打开失败，请检查权限</string>
    <string name="ugckit_video_record_activity_on_record_complete_fail_tip">录制失败，原因：</string>
    <string name="ugckit_video_record_activity_on_record_complete_synthesizing">正在合成...</string>
    <string name="ugckit_video_record_activity_on_join_progress_synthesizing">正在合成</string>
    <string name="ugckit_video_record_activity_on_join_complete_synthesis_failed">合成失败</string>
    <string name="ugckit_video_record_activity_on_request_permissions_result_failed_to_get_permission">获取权限失败</string>
    <string name="ugckit_dialog_title_confirm">确认</string>
    <string name="ugckit_dialog_title_error">错误</string>
    <string name="ugckit_constants_error_msg_net_disconnecte">网络异常，请检查网络</string>
    <string name="ugckit_http_engine_get_error_message_connect_server_failed">连接服务器失败</string>
    <string name="ugckit_http_engine_get_error_message_no_network_connection">无网络连接</string>
    <string name="ugckit_http_engine_get_error_message_network_anomaly">网络异常,请稍后再试</string>
    <string name="ugckit_http_engine_handle_server_error_connect_server_fail">连接服务器失败</string>
    <string name="ugckit_http_engine_handle_server_error_network_anomaly">网络异常,请稍后再试</string>
    <string name="ugckit_utils_check_float_window_permission_yes">开启</string>
    <string name="ugckit_utils_check_float_window_permission_no">不，谢谢</string>
    <string name="ugckit_static_filter_fragment_original">原图</string>
    <string name="ugckit_static_filter_fragment_standard">标准</string>
    <string name="ugckit_static_filter_fragment_cheery">樱红</string>
    <string name="ugckit_static_filter_fragment_cloud">云裳</string>
    <string name="ugckit_static_filter_fragment_pure">纯真</string>
    <string name="ugckit_static_filter_fragment_orchid">白兰</string>
</resources>