<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:flexWrap="nowrap"
    app:justifyContent="space_evenly"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/bg_ugc_record_bottom">


    <TextView
        android:id="@+id/tv_bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_music"
        android:gravity="center"
        android:text="@string/ugckit_music"
        android:textColor="@color/ugckit_white" />

    <TextView
        android:id="@+id/tv_motion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_effect"
        android:gravity="center"
        android:text="特效"
        android:textColor="@color/ugckit_white" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_speed"
        android:gravity="center"
        android:text="@string/ugckit_speed"
        android:textColor="@color/ugckit_white" />

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_filter"
        android:gravity="center"
        android:text="@string/ugckit_filter"
        android:textColor="@color/ugckit_white" />

    <TextView
        android:id="@+id/tv_paster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:visibility="gone"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_effect"
        android:gravity="center"
        android:text="@string/ugckit_paster"
        android:textColor="@color/ugckit_white" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_ugc_edit_subtitle"
        android:gravity="center"
        android:text="@string/ugckit_subtitle"
        android:textColor="@color/ugckit_white" />
</com.google.android.flexbox.FlexboxLayout>